--- a/first_web/home/templates/product.html
+++ b/first_web/home/templates/product.html
@@ -239,6 +239,10 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
         </div>
       </div>
     </div>
+    {%empty%}
+    <h1>
+      hellooo 
+    </h1>
     {% endfor %}
   </div>
   <!-- Endproducts for xs-->
@@ -273,9 +277,14 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
               </div>
               <div class="me-2">{{product.average}} <i class="fa fa-star" style="color: gold;"></i></div>
             </div>
+           
               {% endif %}
       </div>
     </div>
+    {%empty%}
+    <h1>
+      hellooo 
+    </h1>
     {% endfor %}
   </div>
   </div>  
@@ -314,6 +323,10 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
             {% endif %}
     </div>
   </div>
+  {%empty%}
+    <h1>
+      hellooo 
+    </h1>
   {% endfor %}
 </div>
 </div>
@@ -490,6 +503,10 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
                 {% endif %}
         </div>
       </div>
+      {%empty%}
+    <h1>
+      hellooo 
+    </h1>
       {% endfor %}
     </div>
   </div>
