--- a/first_web/cart/templates/cart/cart.html
+++ b/first_web/cart/templates/cart/cart.html
@@ -11,6 +11,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
   <div class="d-flex justify-content-center justify-content-md-start section">
     <div class="col-11 col-md-6 col-lg-5 ms-md-3 mb-4">
       <!-- Continue -->
+      {% if total != 0 %}
       <div class="d-md-none col-7 col-sm-5 border-bottom border-2 p-3 position-sticky bg-white mt-2 rounded-3" style="top: 2%;z-index: 1;">
         <div class="d-flex justify-content-between fw-bold align-items-end mb-1">
           <p class="fs-6 m-0">Total Price:</p>
@@ -18,6 +19,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
         </div>
         <button class="btn btn-success col-12 continue">Continue</button>
       </div>
+      {% endif %}
       <!-- Continue -->
       {% for c in cart %}
       <div class="border col-12 mt-4 bg-white py-3 pe-4 d-flex" style="border-radius: .8rem;position: relative;">
@@ -82,6 +84,12 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
       </div>
       </div>
       {% endfor %}
+      {% for c in cart %}
+      {%empty%}
+<h4 class="text-white text-center mt-4 mb-5 pb-5" style="height: 100%;display: flex;align-items: center;justify-content: center;">
+  There is no product available<i class="fa-solid fa-bell fa-shake ms-2"></i>
+</h4>
+      {% endfor %}
     </div>
     <div class="d-none d-md-flex justify-content-center mt-4 col-md-5 ms-4 col-lg-6">
       <div class="bg-white pt-4 pb-3 px-5 position-sticky" style="height: fit-content;border-radius: .8rem;width: 25rem;top: 10%;">
@@ -108,7 +116,7 @@ background: linear-gradient(to right, #38393b, #1c1e1f);">
   </div>
   <!-- modal in sm -->
   <div class="d-md-none justify-content-center modal-parent">
-    <div class="bg-white pt-4 pb-3 px-5 medal" style="height: fit-content;border-radius: .8rem;">
+    <div class="bg-white pt-4 pb-3 px-5 medal" style="height: fit-content;border-radius: .8rem;z-index: 5;">
       <div class="d-flex justify-content-between fw-bold align-items-end border-bottom mt-4">
         <p class="fs-6 m-0">Total Price:</p>
         <p class="fs-6 m-0">{{total}}$</p>
